fixed image locations

--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
    
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/style.css">
   </head>
   <body>
     <nav class="grey darken-4">
 	    <div class="nav-wrapper">
-		    <a href="#!" class="brand-logo center"><img src="assets/musicc.png"></a>
+		    <a href="#!" class="brand-logo center"><img src="/assets/images/musicc.png"></a>
 		</div>
   	</nav>
     <div class="had-container">
@@ -84,7 +84,7 @@
   <div class="col xl6 l6 m11">
     <ul class="collection">
       <li class="collection-item avatar">
-        <img src="assets/cardi.jpg" alt="" class="circle">
+        <img src="/assets/images/cardi.jpg" alt="" class="circle">
         <span class="title">Title</span>
         <p>First Line <br>
            Second Line
@@ -92,7 +92,7 @@
         <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
       </li>
       <li class="collection-item avatar">
-        <img src="assets/linkinpark.jpg" class="circle">
+        <img src="/assets/images/linkinpark.jpg" class="circle">
         <span class="title">Title</span>
         <p>First Line <br>
            Second Line
@@ -100,7 +100,7 @@
         <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
       </li>
       <li class="collection-item avatar">
-        <img src="assets/immanuel.jpg" class="circle">
+        <img src="/assets/images/immanuel.jpg" class="circle">
         <span class="title">Title</span>
         <p>First Line <br>
            Second Line
@@ -108,7 +108,7 @@
         <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
       </li>
       <li class="collection-item avatar">
-        <img src="assets/thomasrhett.jpg" class="circle">
+        <img src="/assets/images/thomasrhett.jpg" class="circle">
         <span class="title">Title</span>
         <p>First Line <br>
            Second Line
@@ -116,42 +116,42 @@
         <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
       </li>
       <li class="collection-item avatar">
-        <img src="assets/immanuel.jpg" class="circle">
+        <img src="/assets/images/immanuel.jpg" class="circle">
         <span class="title">Title</span>
         <p>First Line <br>
            Second Line
         </p>
         </li>
         <li class="collection-item avatar">
-          <img src="assets/immanuel.jpg" class="circle">
+          <img src="/assets/images/immanuel.jpg" class="circle">
           <span class="title">Title</span>
           <p>First Line <br>
              Second Line
           </p>
           </li>
           <li class="collection-item avatar">
-            <img src="assets/immanuel.jpg" class="circle">
+            <img src="/assets/images/immanuel.jpg" class="circle">
             <span class="title">Title</span>
             <p>First Line <br>
                Second Line
             </p>
             </li>
             <li class="collection-item avatar">
-              <img src="assets/immanuel.jpg" class="circle">
+              <img src="/assets/images/immanuel.jpg" class="circle">
               <span class="title">Title</span>
               <p>First Line <br>
                  Second Line
               </p>
               </li>
               <li class="collection-item avatar">
-                <img src="assets/immanuel.jpg" class="circle">
+                <img src="/assets/images/immanuel.jpg" class="circle">
                 <span class="title">Title</span>
                 <p>First Line <br>
                    Second Line
                 </p>
                 </li>
                 <li class="collection-item avatar">
-                  <img src="assets/immanuel.jpg" class="circle">
+                  <img src="/assets/images/immanuel.jpg" class="circle">
                   <span class="title">Title</span>
                   <p>First Line <br>
                      Second Line
@@ -199,13 +199,13 @@
 </div>
 <div class="carousel" id="demo-carousel">
  
-  <a class="carousel-item" href="#one!"><img src="assets/album.png"></a>
+  <a class="carousel-item" href="#one!"><img src="/assets/images/album.png"></a>
 
-  <a class="carousel-item" href="#two!"><img src="assets/harrystyles.png"></a>
+  <a class="carousel-item" href="#two!"><img src="/assets/images/harrystyles.png"></a>
 
-  <a class="carousel-item" href="#three!"><img src="assets/manic.png"></a>
+  <a class="carousel-item" href="#three!"><img src="/assets/images/manic.png"></a>
 
-  <a class="carousel-item" href="#four!"><img src="assets/beckwith.png"></a>
+  <a class="carousel-item" href="#four!"><img src="/assets/images/beckwith.png"></a>
 
 </div>
 
@@ -223,7 +223,7 @@
   
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script>
+    <script src="/assets/script.js"></script>>
  
       $(document).ready(function(){
        
