working on event listeners

--- a/index.html
+++ b/index.html
@@ -16,68 +16,89 @@
    
     <link rel="stylesheet" href="/assets/style.css">
   </head>
+
   <body>
     <nav class="grey darken-4">
 	    <div class="nav-wrapper">
 		    <a href="#!" class="brand-logo center"><img src="/assets/images/musicc.png"></a>
-		</div>
+		  </div>
   	</nav>
+
     <div class="had-container">
       <div class="parallax-container prof-user">
-       <div class="parallax"><img src="https://alistapart.com/d/438/fig-6--background-blend-mode.jpg"></div>
-       <div class="row"><br>
-         <div class="col m2 s4 offset-m4 offset-s2 center">
-           <h4 class="truncate bg-card-user">
+        <div class="parallax"><img src="https://alistapart.com/d/438/fig-6--background-blend-mode.jpg"></div>
+        <div class="row"><br>
+          <div class="col m2 s4 offset-m4 offset-s2 center">
+            <h4 class="truncate bg-card-user">
           </div>
-       </div>
-     </div>
+        </div>
+      </div>
     </div>
-	<div class="row">
 
+    <div class="row">
       <div class="col xl12 l12 m12 s12">
-		<div class="card-panel center orange">
+        <div class="card-panel center orange">
           <span class="white-text">
             Give me Music!
           </span>
         </div>
       </div> 
+    </div>
+    
+    <div class="col xl4 l4 m12 12">
+      <div class="card-panel center promo blue-grey darken-3 white-text" >
+        <a id="test-id">
+        <i class="material-icons">Popular</i>
+        <p class="promo-caption">This week's most popular songs across all genres, as measured by Nielsen Music, ... Week of February 5, 2022 Popular Music Genres · Blues Music · Jazz Music · .</p>
+        </a>
+      </div>
+    </div>
+  <!-- CAROUSEL for each Genre -->
 
-	
-	<div class="col xl4 l4 m12 12">
-    	<div class="card-panel center promo blue-grey darken-3 white-text">
-            <i class="material-icons">Popular</i>
-            <p class="promo-caption">This week's most popular songs across all genres, as measured by Nielsen Music, ... Week of February 5, 2022 Popular Music Genres · Blues Music · Jazz Music · .</p>
-        </div>
+    <div class="col xl4 l4 m12 12">
+      <div class="card-panel center promo blue-grey darken-3 white-text" id="">
+        <i class="material-icons">Popular</i>
+        <p class="promo-caption">This week's most popular songs across all genres, as measured by Nielsen Music, ... Week of February 5, 2022 Popular Music Genres · Blues Music · Jazz Music · .</p>
+      </div>
+    </div>
+
+    <div class="col xl4 l4 m12 12">
+      <div class="card-panel center promo blue-grey darken-3 white-text">
+        <i class="material-icons">Jazz</i>
+          <p class="promo-caption"></p>
+          <p class="light center">Top 10 Best Jazz Songs Of All Time · 1. My Funny Valentine – Chet Baker · 2. Somewhere Over The Rainbow – Judy Garland · 3. Summertime – Ella ...</p>
+      </div>
+    </div>
+
+    <div class="col xl4 l4 m12 12">
+      <div class="card-panel center promo blue-grey darken-3 white-text">
+        <i class="material-icons">Hip hop</i>
+        <p class="promo-caption">Hip Hop Songs! Best New Rap Hits 2021. Play it LOUD! Discover new releases here weekly. feat Gang Gang Polo G Calling My Phone Lil Tjay, Travis Scott, ...</p>
+      </div>
     </div>
     <div class="col xl4 l4 m12 12">
-    	<div class="card-panel center promo blue-grey darken-3 white-text">
-            <i class="material-icons">Jazz</i>
-            <p class="promo-caption"></p>
-            <p class="light center">Top 10 Best Jazz Songs Of All Time · 1. My Funny Valentine – Chet Baker · 2. Somewhere Over The Rainbow – Judy Garland · 3. Summertime – Ella ...</p>
+      <div class="card-panel center promo blue-grey darken-3 white-text">
+          <i class="material-icons">Rock</i>
+          <p class="promo-caption">Newest Rock Albums & Song Releases · John Mellencamp · The Band · Bruce Springsteen & the E Street Band · Underoath · Latest ReleasesRock Latest ReleasesRock Latest ...</p>
         </div>
     </div>
+  
     <div class="col xl4 l4 m12 12">
-    	<div class="card-panel center promo blue-grey darken-3 white-text">
-            <i class="material-icons">Hip hop</i>
-            <p class="promo-caption">Hip Hop Songs! Best New Rap Hits 2021. Play it LOUD! Discover new releases here weekly. feat Gang Gang Polo G Calling My Phone Lil Tjay, Travis Scott, ...</p>
-        </div>
+      <div class="card-panel genre center promo blue-grey darken-3 white-text">
+        <i class="material-icons">Pop</i>
+        <p class="promo-caption">10 Cool New Pop Songs to Get You Through The Week: Aurora, Sebastian Yatra, Ryland James & More. Pop any of these new tracks into your ...</p>
+      </div>
     </div>
+
     <div class="col xl4 l4 m12 12">
-    	<div class="card-panel center promo blue-grey darken-3 white-text">
-            <i class="material-icons">Rock</i>
-            <p class="promo-caption">Newest Rock Albums & Song Releases · John Mellencamp · The Band · Bruce Springsteen & the E Street Band · Underoath · Latest ReleasesRock Latest ReleasesRock Latest ...</p>
-        </div>
-    </div><div class="col xl4 l4 m12 12">
-    	<div class="card-panel genre center promo blue-grey darken-3 white-text">
-            <i class="material-icons">Pop</i>
-            <p class="promo-caption">10 Cool New Pop Songs to Get You Through The Week: Aurora, Sebastian Yatra, Ryland James & More. Pop any of these new tracks into your ...</p>
-        </div>
-    </div><div class="col xl4 l4 m12 12">
-    	<div class="card-panel genre center promo blue-grey darken-3 white-text">
-            <i class="material-icons">Country</i>
-            <p class="promo-caption">Newest Country Songs · Carly Pearce Mary, Did You Know? · Maddie & Tae Madness · George Strait The Weight Of The Badge · Dierks Bentley Beers On Me · Aaron Lewis ...</p>
-        </div>
+      <div class="card-panel genre center promo blue-grey darken-3 white-text">
+        <i class="material-icons">Country</i>
+        <p class="promo-caption">Newest Country Songs · Carly Pearce Mary, Did You Know? · Maddie & Tae Madness · George Strait The Weight Of The Badge · Dierks Bentley Beers On Me · Aaron Lewis ...</p>
+      </div>
     </div>
+
+ 
+
   </div>
   <div class="row">
   <div class="col xl3 l3 m1"></div>
