--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    
     <nav class="grey darken-4">
 	    <div class="nav-wrapper">
 		    <a href="#!" class="brand-logo center"><img src="./assets/images/musicc.png"></a>
@@ -27,7 +28,7 @@
     <div class="had-container">
       <div class="parallax-container prof-user">
         <div class="parallax"><img src="https://alistapart.com/d/438/fig-6--background-blend-mode.jpg"></div>
-        <div class="row"><br>
+        <div class="row">
           <div class="col m2 s4 offset-m4 offset-s2 center">
             <h4 class="truncate bg-card-user">
           </div>
@@ -44,163 +45,225 @@
         </div>
       </div> 
     </div>
-    <!-- CAROUSEL for each Genre -->
+
+<!----------------------------------------------------------------------------------------- 
+-                                       Top 10 Artists Carousel 
+------------------------------------------------------------------------------------------->
     <section class="selectgenre">
-        <h2>Give Me 10 Artists...</h2>
-        <div class="wrapper">
-            <div class="carrouselwrapper" id="artistscarousel">
-                <div class="genrecontainer" id="genre1artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                    <p>POP</p>
-                </div>
-                <div class="genrecontainer" id="genre2artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                    <p>ROCK</p>
-                </div>
-                <div class="genrecontainer" id="genre3artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
-                <div class="genrecontainer" id="genre4artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
-                <div class="genrecontainer" id="genre5artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
-                <div class="genrecontainer" id="genre6artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
-                <div class="genrecontainer" id="genre7artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
-                <div class="genrecontainer" id="genre8artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
-                <div class="genrecontainer" id="genre9artists">
-                    <img src="https://via.placeholder.com/300x125.png" />
-                </div>
+      <h2>Give Me 10 Artists...</h2>
+      <div class="wrapper">
+        <div class="carrouselwrapper" id="artistscarousel">
+            <div class="genrecontainer" id="genre1artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+                <p>POP</p>
+            </div>
+            <div class="genrecontainer" id="genre2artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+                <p>ROCK</p>
+            </div>
+            <div class="genrecontainer" id="genre3artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+            </div>
+            <div class="genrecontainer" id="genre4artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+            </div>
+            <div class="genrecontainer" id="genre5artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+            </div>
+            <div class="genrecontainer" id="genre6artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+            </div>
+            <div class="genrecontainer" id="genre7artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+            </div>
+            <div class="genrecontainer" id="genre8artists">
+                <img src="https://via.placeholder.com/300x125.png" />
+            </div>
+            <div class="genrecontainer" id="genre9artists">
+                <img src="https://via.placeholder.com/300x125.png" />
             </div>
         </div>
+      </div>
     </section>
 
+<!----------------------------------------------------------------------------------------- 
+-                                       Top 10 Tracks Carousel
+------------------------------------------------------------------------------------------->
+    <section class="selectgenre">
+      <h2>Give Me 10 Tracks...</h2>
+      <div class="wrapper">
+        <div class="carrouselwrapper" id="trackscarousel">
 
-  <div class="row">
-    <div class="col xl3 l3 m1"></div>
-    <div class="col xl6 l6 m11">
-    <ul class="collection">
-      <li class="collection-item avatar">
-        <img src="./assets/images/cardi.jpg" alt="" class="circle">
-        <span class="title">Title</span>
-        <p>First Line <br>
-           Second Line
-        </p>
-        <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
-      </li>
-      <li class="collection-item avatar">
-        <img src="./assets/images/linkinpark.jpg" class="circle">
-        <span class="title">Title</span>
-        <p>First Line <br>
-           Second Line
-        </p>
-        <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
-      </li>
-      <li class="collection-item avatar">
-        <img src="./assets/images/immanuel.jpg" class="circle">
-        <span class="title">Title</span>
-        <p>First Line <br>
-           Second Line
-        </p>
-        <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
-      </li>
-      <li class="collection-item avatar">
-        <img src="./assets/images/thomasrhett.jpg" class="circle">
-        <span class="title">Title</span>
-        <p>First Line <br>
-           Second Line
-        </p>
-        <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
-      </li>
-      <li class="collection-item avatar">
-        <img src="./assets/images/immanuel.jpg" class="circle">
-        <span class="title">Title</span>
-        <p>First Line <br>
-           Second Line
-        </p>
-        </li>
-        <li class="collection-item avatar">
-          <img src="./assets/images/immanuel.jpg" class="circle">
-          <span class="title">Title</span>
-          <p>First Line <br>
-             Second Line
-          </p>
+          <div class="genrecontainer" id="genre1tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+              <p>POP</p>
+          </div>
+
+          <div class="genrecontainer" id="genre2tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+              <p>ROCK</p>
+          </div>
+
+          <div class="genrecontainer" id="genre3tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+          <div class="genrecontainer" id="genre4tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+          <div class="genrecontainer" id="genre5tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+          <div class="genrecontainer" id="genre6tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+          <div class="genrecontainer" id="genre7tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+          <div class="genrecontainer" id="genre8tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+          <div class="genrecontainer" id="genre9tracks">
+              <img src="https://via.placeholder.com/300x125.png" />
+          </div>
+
+        </div>
+      </div>
+    </section>
+
+<!----------------------------------------------------------------------------------------- 
+-                              MODAL - After clicking ona Carousel Icon
+------------------------------------------------------------------------------------------->
+
+    <div class="row">
+      <div class="col xl3 l3 m1"></div>
+      <div class="col xl6 l6 m11">
+        <ul class="collection">
+          <li class="collection-item avatar">
+            <img src="./assets/images/cardi.jpg" alt="" class="circle">
+            <span class="title">Title</span>
+            <p>First Line <br>
+            Second Line
+            </p>
+            <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
           </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/linkinpark.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+            <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
+          </li>
+
           <li class="collection-item avatar">
             <img src="./assets/images/immanuel.jpg" class="circle">
             <span class="title">Title</span>
-            <p>First Line <br>
-               Second Line
-            </p>
-            </li>
-            <li class="collection-item avatar">
-              <img src="./assets/images/immanuel.jpg" class="circle">
-              <span class="title">Title</span>
-              <p>First Line <br>
-                 Second Line
-              </p>
-              </li>
-              <li class="collection-item avatar">
-                <img src="./assets/images/immanuel.jpg" class="circle">
-                <span class="title">Title</span>
-                <p>First Line <br>
-                   Second Line
-                </p>
-                </li>
-                <li class="collection-item avatar">
-                  <img src="./assets/images/immanuel.jpg" class="circle">
-                  <span class="title">Title</span>
-                  <p>First Line <br>
-                     Second Line
-                  </p>
-    </ul>
-    </div> 
-</div>
-<div class="row">
-  <div class="col xl3 l3 m1"></div>
-  <div class="col xl6 l6 m11">
-<ul class="collection with-header">
-  <li class="collection-header"><h4>Tracks</h4></li>
-  <li class="collection-item">Track 1</li>
-  <li class="collection-item">Track 2</li>
-  <li class="collection-item">Track 3</li>
-  <li class="collection-item">Track 4</li>
-  <li class="collection-item">Track 5</li>
-  <li class="collection-item">Track 6</li>
-  <li class="collection-item">Track 7</li>
-  <li class="collection-item">Track 8</li>
-  <li class="collection-item">Track 9</li>
-  <li class="collection-item">Track 10</li>
-</ul></div>
-</div>
-<div class="carousel carousel-slider center">
-  <div class="carousel-fixed-item center">
-    <a class="btn waves-effect white grey-text darken-text-2">button</a>
-  </div>
-  <div class="carousel-item red white-text" href="#one!">
-    <h2>First Panel</h2>
-    <p class="white-text">This is your first panel</p>
-  </div>
-  <div class="carousel-item amber white-text" href="#two!">
-    <h2>Second Panel</h2>
-    <p class="white-text">This is your second panel</p>
-  </div>
-  <div class="carousel-item green white-text" href="#three!">
-    <h2>Third Panel</h2>
-    <p class="white-text">This is your third panel</p>
-  </div>
-  <div class="carousel-item blue white-text" href="#four!">
-    <h2>Fourth Panel</h2>
-    <p class="white-text">This is your fourth panel</p>
-  </div>
-</div>
+            <p>First Line<br>Second Line</p>
+            <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/thomasrhett.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+            <a href="#!" class="secondary-content"><i class="material-icons"></i></a>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/immanuel.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/immanuel.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/immanuel.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/immanuel.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/immanuel.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+          </li>
+
+          <li class="collection-item avatar">
+            <img src="./assets/images/immanuel.jpg" class="circle">
+            <span class="title">Title</span>
+            <p>First Line<br>Second Line</p>
+          </li>
+        </ul>
+      </div> 
+    </div>
+
+<!----------------------------------------------------------------------------------------- 
+-                              TRACKS - Simple list of Text Fields (usage - TBD)
+------------------------------------------------------------------------------------------->
+    <div class="row">
+      <div class="col xl3 l3 m1"></div>
+      <div class="col xl6 l6 m11">
+        <ul class="collection with-header">
+        <li class="collection-header"><h4>Tracks</h4></li>
+        <li class="collection-item">Track 1</li>
+        <li class="collection-item">Track 2</li>
+        <li class="collection-item">Track 3</li>
+        <li class="collection-item">Track 4</li>
+        <li class="collection-item">Track 5</li>
+        <li class="collection-item">Track 6</li>
+        <li class="collection-item">Track 7</li>
+        <li class="collection-item">Track 8</li>
+        <li class="collection-item">Track 9</li>
+        <li class="collection-item">Track 10</li>
+      </ul>
+    </div>
+
+
+    <div class="carousel carousel-slider center">
+
+      <div class="carousel-fixed-item center">
+        <a class="btn waves-effect white grey-text darken-text-2">button</a>
+      </div>
+
+      <div class="carousel-item red white-text" href="#one!">
+        <h2>First Panel</h2>
+        <p class="white-text">This is your first panel</p>
+      </div>
+
+      <div class="carousel-item amber white-text" href="#two!">
+        <h2>Second Panel</h2>
+        <p class="white-text">This is your second panel</p>
+      </div>
+
+      <div class="carousel-item green white-text" href="#three!">
+        <h2>Third Panel</h2>
+        <p class="white-text">This is your third panel</p>
+      </div>
+
+      <div class="carousel-item blue white-text" href="#four!">
+        <h2>Fourth Panel</h2>
+        <p class="white-text">This is your fourth panel</p>
+      </div>
+
+    </div>
+
+    
 <div class="carousel" id="demo-carousel">
  
   <a class="carousel-item" href="#one!"><img src="./assets/images/album.png"></a>
