fixed broken image on hero section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <div class="had-container">
       <div class="parallax-container prof-user">
-        <div class="parallax"><img src="https://alistapart.com/d/438/fig-6--background-blend-mode.jpg"></div>
+        <div class="parallax"><img src="http://materializecss.com/templates/parallax-template/background3.jpg"></div>
         <div class="row">
           <div class="col m2 s4 offset-m4 offset-s2 center">
             <h4 class="truncate bg-card-user">
