added QR code function

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     </head>
 
     <body>
+       
+       <img id="spotifyImg" src=""/>
+
        <script src="./assets/script.js"></script> 
     </body>
 
