updates to eventlisteners

--- a/index.html
+++ b/index.html
@@ -48,55 +48,55 @@
     <div class="row">
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="rock-box">
           <a><span class="white-text">Rock</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="hiphop-box">
+          <a><span class="white-text">HipHop</span></a>
+        </div>
+      </div> 
+
+      <div class="col">
+        <div class="card-panel center green genre-selector" id="jazz-box">
           <a><span class="white-text">Jazz</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
-          <a><span class="white-text">Jazz</span></a>
-        </div>
-      </div> 
-
-      <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="classical-music-box">
           <a><span class="white-text">Classical Music</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="edm-box">
           <a><span class="white-text">EDM</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="pop-box">
           <a><span class="white-text">Pop</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="rap-box">
           <a><span class="white-text">Rap</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="party-box">
           <a><span class="white-text">Party</span></a>
         </div>
       </div> 
 
       <div class="col">
-        <div class="card-panel center green">
+        <div class="card-panel center green genre-selector" id="alternative-box">
           <a><span class="white-text">Alternative</span></a>
         </div>
       </div> 
@@ -108,7 +108,7 @@
 -                                       Top 10 Artists Carousel 
 ------------------------------------------------------------------------------------------->
     <section class="selectgenre">
-      <h2>Give Me 10 Artists...</h2>
+      <h2>Give Me the Top 10 Artists</h2>
       <div class="wrapper">
         <div class="carrouselwrapper" id="artistscarousel">
 
@@ -149,7 +149,7 @@
 -                                       Top 10 Tracks Carousel
 ------------------------------------------------------------------------------------------->
     <section class="selectgenre">
-      <h2>Give Me 10 Tracks...</h2>
+      <h2>Give Me the Top 10 Tracks</h2>
       <div class="wrapper">
         <div class="carrouselwrapper" id="trackscarousel">
 
