fixed genre selection function

--- a/index.html
+++ b/index.html
@@ -45,58 +45,58 @@
 -                                       Genre Selector
 ------------------------------------------------------------------------------------------->
     
-    <div class="row">
+    <div class="row genre-selection">
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="rock-box">
+      <div class="col genre-section" id="rock-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Rock</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="hiphop-box">
+      <div class="col genre-section" id="hiphop-box">
+        <div class="card-panel center green genre-selector">
           <a><span class="white-text">HipHop</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="jazz-box">
+      <div class="col genre-section" id="jazz-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Jazz</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="classical-music-box">
+      <div class="col genre-section" id="classical-music-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Classical Music</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="edm-box">
+      <div class="col genre-section" id="edm-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">EDM</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="pop-box">
+      <div class="col genre-section" id="pop-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Pop</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="rap-box">
+      <div class="col genre-section" id="rap-box">
+        <div class="card-panel center green genre-selector">
           <a><span class="white-text">Rap</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="party-box">
+      <div class="col genre-section"id="party-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Party</span></a>
         </div>
       </div> 
 
-      <div class="col">
-        <div class="card-panel center green genre-selector" id="alternative-box">
+      <div class="col genre-section"id="alternative-box">
+        <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Alternative</span></a>
         </div>
       </div> 
@@ -198,7 +198,7 @@
 <!----------------------------------------------------------------------------------------- 
 -                              MODAL - After clicking ona Carousel Icon
 ------------------------------------------------------------------------------------------->
-
+<!-- 
     <div class="row">
       <div class="col xl3 l3 m1"></div>
       <div class="col xl6 l6 m11">
@@ -271,11 +271,11 @@
         </ul>
       </div> 
     </div>
-
+-->
 <!----------------------------------------------------------------------------------------- 
 -                              TRACKS - Simple list of Text Fields (usage - TBD)
 ------------------------------------------------------------------------------------------->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col xl3 l3 m1"></div>
       <div class="col xl6 l6 m11">
         <ul class="collection with-header">
@@ -333,7 +333,7 @@
 
   <a class="carousel-item" href="#four!"><img src="./assets/images/beckwith.png"></a>
 
-</div>
+</div> -->
 
 </div>
 	<div class="parallax-container">
