--- a/index.html
+++ b/index.html
@@ -47,55 +47,55 @@
     
     <div class="row genre-selection">
 
-      <div class="col genre-section" id="rock-box">
+      <div class="col genre-section" id="rock">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Rock</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section" id="hiphop-box">
+      <div class="col genre-section" id="hiphop">
         <div class="card-panel center green genre-selector">
           <a><span class="white-text">HipHop</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section" id="jazz-box">
+      <div class="col genre-section" id="jazz">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Jazz</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section" id="classical-music-box">
+      <div class="col genre-section" id="classical">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Classical Music</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section" id="edm-box">
+      <div class="col genre-section" id="edm">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">EDM</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section" id="pop-box">
+      <div class="col genre-section" id="pop">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Pop</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section" id="rap-box">
+      <div class="col genre-section" id="rap">
         <div class="card-panel center green genre-selector">
           <a><span class="white-text">Rap</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section"id="party-box">
+      <div class="col genre-section"id="party">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Party</span></a>
         </div>
       </div> 
 
-      <div class="col genre-section"id="alternative-box">
+      <div class="col genre-section"id="alternative">
         <div class="card-panel center green genre-selector" >
           <a><span class="white-text">Alternative</span></a>
         </div>
