additional fixes on changing images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <div class="row">
       <div class="col xl12 l12 m12 s12">
-        <div class="card-panel center green">
+        <div class="card-panel center orange">
           <span class="white-text">
             Give Me Music!
           </span>
@@ -53,7 +53,7 @@
         </div>
       </div> 
 
-      <div class="col genre-section" id="hiphop">
+      <div class="col genre-section" id="hip hop">
         <div class="card-panel center green genre-selector">
           <a><span class="white-text">HipHop</span></a>
         </div>
@@ -112,33 +112,32 @@
       <div class="wrapper">
         <div class="carrouselwrapper" id="artistscarousel">
 
-            <div class="genrecontainer" id="classic-rock-artists">
+            <div class="genrecontainer" id="artist1">
         
             </div>
-            <div class="genrecontainer" id="hiphop-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
-              <p>ROCK</p>
+            <div class="genrecontainer" id="artist2">
+
             </div>
-            <div class="genrecontainer" id="jazz-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist3">
+
             </div>
-            <div class="genrecontainer" id="classical-music-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist4">
+
             </div>
-            <div class="genrecontainer" id="edm-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist5">
+
             </div>
-            <div class="genrecontainer" id="pop-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist6">
+ 
             </div>
-            <div class="genrecontainer" id="rap-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist7">
+  
             </div>
-            <div class="genrecontainer" id="party-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist8">
+
             </div>
-            <div class="genrecontainer" id="alternative-artists">
-              <img src="https://via.placeholder.com/300x125.png" />
+            <div class="genrecontainer" id="artist9">
+
             </div>
 
         </div>
@@ -153,41 +152,41 @@
       <div class="wrapper">
         <div class="carrouselwrapper" id="trackscarousel">
 
-          <div class="genrecontainer" id="genre1tracks">
+          <div class="genrecontainer" id="track1">
               <img src="https://via.placeholder.com/300x125.png" />
               <p class="centered">POP</p>
           </div>
 
-          <div class="genrecontainer" id="genre2tracks">
+          <div class="genrecontainer" id="track2">
               <img src="https://via.placeholder.com/300x125.png" />
               <p>ROCK</p>
           </div>
 
-          <div class="genrecontainer" id="genre3tracks">
+          <div class="genrecontainer" id="track3">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
-          <div class="genrecontainer" id="genre4tracks">
+          <div class="genrecontainer" id="track4">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
-          <div class="genrecontainer" id="genre5tracks">
+          <div class="genrecontainer" id="track5">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
-          <div class="genrecontainer" id="genre6tracks">
+          <div class="genrecontainer" id="track6">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
-          <div class="genrecontainer" id="genre7tracks">
+          <div class="genrecontainer" id="track7">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
-          <div class="genrecontainer" id="genre8tracks">
+          <div class="genrecontainer" id="track8">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
-          <div class="genrecontainer" id="genre9tracks">
+          <div class="genrecontainer" id="track9">
               <img src="https://via.placeholder.com/300x125.png" />
           </div>
 
