minor bug fixed

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="col genre-section" id="hip hop">
         <div class="card-panel center green genre-selector">
-          <a><span class="white-text">HipHop</span></a>
+          <span class="white-text">HipHop</span>
         </div>
       </div> 
 
