--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 <!----------------------------------------------------------------------------------------- 
 -                              TRACKS - Simple list of Text Fields (usage - TBD)
 ------------------------------------------------------------------------------------------->
-    <!-- <div class="row">
+     <div class="row">
       <div class="col xl3 l3 m1"></div>
       <div class="col xl6 l6 m11">
         <ul class="collection with-header">
@@ -332,7 +332,7 @@
 
   <a class="carousel-item" href="#four!"><img src="./assets/images/beckwith.png"></a>
 
-</div> -->
+</div> 
 
 </div>
 	<div class="parallax-container">
