updated images and layout

--- a/index.html
+++ b/index.html
@@ -8,40 +8,33 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge"> 
-    <title>Give me Music!</title>
+    <title>Give Me Music!</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="./assets/style.css">
   </head>
 
   <body>
-    
-    <nav class="grey darken-4">
-	    <div class="nav-wrapper">
-		    <a href="#!" class="brand-logo center"><img src=" "></a>
-		  </div>
-  	</nav>
+
+    <div class="row">
+        <div class="card-panel center">
+          <span class="white-text">
+            Give Me Music!
+          </span>
+        </div>
+    </div>
 
     <div class="head-container">
-
-
         <div class="row">
+          <img class="pics" src="./assets/images/gaspar-zaldo-7cv7zEL288E-unsplash.jpg">
+          <img class="pics" src="./assets/images/alexa-portoraro-UY6fGOn2218-unsplash.jpg">   
+          <img class="pics" src="./assets/images/raphael-lopes-lXyn0_Tq35g-unsplash.jpg">        
           <div class="col m2 s4 offset-m4 offset-s2 center">
-            <h4 class="truncate bg-card-user">
+            <h4 class="truncate bg-card-user"> 
           </div>
         </div>
       </div>
     </div>
 
-    <div class="row">
-      <img src=""
-      <div class="col xl12 l12 m12 s12">
-        <div class="card-panel center grey">
-          <span class="white-text">
-            Give Me Music!
-          </span>
-        </div>
-      </div> 
-    </div>
 <!----------------------------------------------------------------------------------------- 
 -                                       Genre Selector
 ------------------------------------------------------------------------------------------->
@@ -49,59 +42,65 @@
     <div class="row genre-selection">
 
       <div class="col genre-section" id="rock">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">Rock</span></a>
         </div>
       </div> 
 
       <div class="col genre-section" id="hip hop">
-        <div class="card-panel center grey genre-selector">
+        <div class="card-panel center genre-selector">
           <a><span class="white-text">HipHop</span></a>
         </div>
       </div> 
 
       <div class="col genre-section" id="jazz">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">Jazz</span></a>
         </div>
       </div> 
 
       <div class="col genre-section" id="classical">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">Classical Music</span></a>
         </div>
       </div> 
 
       <div class="col genre-section" id="edm">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">EDM</span></a>
         </div>
       </div> 
 
       <div class="col genre-section" id="pop">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">Pop</span></a>
         </div>
       </div> 
 
       <div class="col genre-section" id="rap">
-        <div class="card-panel center grey genre-selector">
+        <div class="card-panel center genre-selector">
           <a><span class="white-text">Rap</span></a>
         </div>
       </div> 
 
       <div class="col genre-section"id="party">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">Party</span></a>
         </div>
       </div> 
 
       <div class="col genre-section"id="alternative">
-        <div class="card-panel center grey genre-selector" >
+        <div class="card-panel center genre-selector" >
           <a><span class="white-text">Alternative</span></a>
         </div>
       </div> 
   </div>  
+
+    <div class="row">
+      <img class="pics" src="./assets/images/kelsey-chance-tAH2cA_BL5g-unsplash.jpg"> 
+      <img class="pics" src="./assets/images/danny-howe-bn-D2bCvpik-unsplash.jpg">
+      <img class="pics" src="./assets/images/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+    </div>
 
 <!----------------------------------------------------------------------------------------- 
 -                                       Top 10 Artists Carousel 
@@ -197,8 +196,6 @@
         </div>
       </div>
     </section>
-
-
 
 <footer class="page-footer grey darken-4">
     <div class="footer-copyright">
