--- a/index.html
+++ b/index.html
@@ -106,36 +106,36 @@
     <section class="selectgenre">
       <h2>Give Me the Top 10 Artists</h2>
       <div class="wrapper">
-        <div class="carrouselwrapper" id="artistscarousel">
+        <div class="carrouselwrapper" id="artistscarrousel">
 
-            <div class="genrecontainer" id="artist1">
+            <div class="artistcontainer" id="artist1">
                 <img src="" id="a1img">
             </div>
-            <div class="genrecontainer" id="artist2">
+            <div class="artistcontainer" id="artist2">
                 <img src="" id="a2img">
             </div>
-            <div class="genrecontainer" id="artist3">
+            <div class="artistcontainer" id="artist3">
                 <img src="" id="a3img">
             </div>
-            <div class="genrecontainer" id="artist4">
+            <div class="artistcontainer" id="artist4">
                 <img src="" id="a4img">
             </div>
-            <div class="genrecontainer" id="artist5">
+            <div class="artistcontainer" id="artist5">
                 <img src="" id="a5img">
             </div>
-            <div class="genrecontainer" id="artist6">
+            <div class="artistcontainer" id="artist6">
                 <img src="" id="a6img">
             </div>
-            <div class="genrecontainer" id="artist7">
+            <div class="artistcontainer" id="artist7">
                 <img src="" id="a7img">
             </div>
-            <div class="genrecontainer" id="artist8">
+            <div class="artistcontainer" id="artist8">
                 <img src="" id="a8img">
             </div>
-            <div class="genrecontainer" id="artist9">
+            <div class="artistcontainer" id="artist9">
                 <img src="" id="a9img">
             </div>
-            <div class="genrecontainer" id="artist10">
+            <div class="artistcontainer" id="artist10">
                 <img src="" id="a10img">
             </div>
 
@@ -151,45 +151,45 @@
       <h2>Give Me the Top 10 Tracks</h2>
       <div class="wrapper">
 
-        <div class="carrouselwrapper" id="trackscarousel">
+        <div class="carrouselwrapper" id="trackscarrousel">
 
-          <div class="genrecontainer" id="track1">
+          <div class="trackcontainer" id="track1">
             <img src="" id="t1img">
           </div>
 
-          <div class="genrecontainer" id="track2">
+          <div class="trackcontainer" id="track2">
             <img src="" id="t2img">
           </div>
 
-          <div class="genrecontainer" id="track3">
+          <div class="trackcontainer" id="track3">
             <img src="" id="t3img">
           </div>
 
-          <div class="genrecontainer" id="track4">
+          <div class="trackcontainer" id="track4">
             <img src="" id="t4img">
           </div>
 
-          <div class="genrecontainer" id="track5">
+          <div class="trackcontainer" id="track5">
             <img src="" id="t5img">
           </div>
 
-          <div class="genrecontainer" id="track6">
+          <div class="trackcontainer" id="track6">
             <img src="" id="t6img">
           </div>
 
-          <div class="genrecontainer" id="track7">
+          <div class="trackcontainer" id="track7">
             <img src="" id="t7img">
           </div>
 
-          <div class="genrecontainer" id="track8">
+          <div class="trackcontainer" id="track8">
             <img src="" id="t8img">
           </div>
 
-          <div class="genrecontainer" id="track9">
+          <div class="trackcontainer" id="track9">
             <img src="" id="t9img"> 
           </div>
 
-          <div class="genrecontainer" id="track10">
+          <div class="trackcontainer" id="track10">
             <img src="" id="t10img">
           </div>
 
@@ -202,7 +202,7 @@
 <!-- --------------------------------------------------------------------------------------- 
 -                                     MODAL
 ------------------------------------------------------------------------------------------->
-  <!-- 
+  
   <div id="modal1" class="modal">
     <div class="modal-content">
       <ul class="collection with-header">
@@ -221,7 +221,7 @@
       <a href="#modal1" class="modal-close waves-effect waves-green btn-flat modal-text">Back to List</a>
     </div>
   </div>  
-  -->
+
 
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
