--- a/index.html
+++ b/index.html
@@ -202,26 +202,15 @@
 <!-- --------------------------------------------------------------------------------------- 
 -                                     MODAL
 ------------------------------------------------------------------------------------------->
-  <!-- 
   <div id="modal1" class="modal">
-    <div class="modal-content">
-      <ul class="collection with-header">
-        <h4 class="modal-text collection-item">Modal Header</h4>
-        <li class="collection-item">Track 1</li>
-        <li class="collection-item">Track 2</li>
-        <li class="collection-item">Track 3</li>
-        <li class="collection-item">Track 4</li>
-        <li class="collection-item">Track 5</li>
-        <li class="collection-item">Track 6</li>
-        <li class="collection-item">Track 7</li>
-        <li class="collection-item">Track 8</li>
-        <li class="collection-item">Track 9</li>
-        <li class="collection-item">Track 10</li>
-      </ul>
+    <div class="modal-content" id="modal-1-content">
+      
+  
+  
       <a href="#modal1" class="modal-close waves-effect waves-green btn-flat modal-text">Back to List</a>
     </div>
   </div>  
-  -->
+
 
 
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
