--- a/index.html
+++ b/index.html
@@ -206,8 +206,10 @@
   <div id="modal1" class="modal">
     <div class="modal-content" id="modal-1-content">
 
-      <a href="#modal1" class="modal-close waves-effect waves-green">Back to List</a>
+      
     </div>
+    <div class="modal-content">
+      <a href="#modal1" class="modal-close waves-effect waves-green">Back to List</a>
     </div>
   </div>  
 
