updating top 10 tracks modal

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
   
   <div id="modal1" class="modal">
     <div class="modal-content">
-      <a href="#modal1" class="modal-close waves-effect waves-green">Back to List</a>
+      <a href="#modal1" class="modal-close waves-effect waves-green closeBtn">Back to List</a>
     </div>
     <div class="modal-content" id="modal-1-content">
 
